--- a/styles/style.css
+++ b/styles/style.css
@@ -71,14 +71,15 @@ ol {
 }
 
 .content__details {
-  height: 100%;
   width: 100%;
 }
 
 .content__list-container {
-  height: 209px;
-  overflow: scroll;
+  width: 390px;
+  height: 298px;
+  overflow: auto;
   display: flex;
+  flex-direction: column;
   gap: 30px;
 }
 
@@ -86,6 +87,17 @@ ol {
 
 .title {
   margin-bottom: 26px;
+  font-family: Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 0.94;
+  text-transform: uppercase;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
 }
 
 .result__video-container {
@@ -115,5 +127,33 @@ ol {
 }
 
 .content__video-card-description-container {
-  flex-grow: 1;
+  flex-grow: 2;
+  overflow: hidden;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.content__accent {
+  color: rgb(84 80 80 / 1);
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
 }
