--- a/styles/style.css
+++ b/styles/style.css
@@ -157,3 +157,14 @@ ol {
   white-space: nowrap;
   overflow: hidden;
 }
+
+.content__video-card-description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 0.9;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  overflow: hidden;
+}
