--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,16 @@ ol {
   background-color: #d9d9d9;
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .content {
   display: grid;
   grid-template-columns: 711px 399px;
@@ -66,8 +76,8 @@ ol {
 .search-form {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: start;
+  gap: 40px;
+  align-items: end;
 }
 
 .content__details {
@@ -77,6 +87,7 @@ ol {
 .content__list-container {
   width: 390px;
   height: 298px;
+  margin-left: 2px;
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -86,7 +97,7 @@ ol {
 /* TODO: подумать, как сделать не чз margin */
 
 .title {
-  margin-bottom: 26px;
+  margin-bottom: 25px;
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 75px;
@@ -167,4 +178,73 @@ ol {
   -webkit-line-clamp: 4;
   line-clamp: 4;
   overflow: hidden;
+}
+
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__textfield {
+  background: transparent;
+  width: 225px;
+  height: 27px;
+  border: solid 1px rgb(255 255 255 / 1);
+  border-width: 1px 0;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: 1.2;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgb(255 255 255 / 0.7);
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid rgb(255 255 255 / 1);
+}
+
+.search-form__pseudo-checkbox {
+  height: 19px;
+  width: 19px;
+  border: 1px solid rgb(255 255 255 / 1);
+  margin-right: 1.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  display: none;
+  background-position: center;
+  background-color: #fff;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  display: block;
+}
+
+.search-form__label:has(input[type='checkbox']):hover {
+  text-decoration: underline;
 }
