--- a/styles/style.css
+++ b/styles/style.css
@@ -193,13 +193,16 @@ ol {
 
 .search-form__fieldset {
   border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .search-form__textfield {
   background: transparent;
   width: 225px;
   height: 27px;
-  border: solid 1px rgb(255 255 255 / 1);
+  border: solid 1px white;
   border-width: 1px 0;
   font-family: inherit;
   font-weight: inherit;
@@ -219,14 +222,14 @@ ol {
 }
 
 .search-form__label:has(:focus-visible) {
-  outline: 1px solid rgb(255 255 255 / 1);
+  outline: 1px solid white;
 }
 
 .search-form__pseudo-checkbox {
   height: 19px;
   width: 19px;
-  border: 1px solid rgb(255 255 255 / 1);
-  margin-right: 1.5px;
+  border: 1px solid white;
+  margin-right: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -247,4 +250,40 @@ ol {
 
 .search-form__label:has(input[type="checkbox"]):hover {
   text-decoration: underline;
+}
+
+.button {
+  border: 1px solid white;
+  color: white;
+  background: transparent;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.search-form__submit-button {
+  padding: 6px 73.5px;
+  margin-left: auto;
+}
+
+.more-button {
+  width: 100%;
+  padding: 6px 0;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: rgb(84 80 80);
+}
+
+.button:focus-visible {
+  outline: 1px solid white;
 }
