достилизовали карточки курсоры и прелоадеры

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@ ol {
 }
 
 .content__list-container {
+  position: relative;
   width: 390px;
   height: 298px;
   margin-left: 2px;
@@ -112,6 +113,7 @@ ol {
 }
 
 .result__video-container {
+  position: relative;
   width: 100%;
   height: 386px;
   margin-bottom: 16px;
@@ -127,7 +129,7 @@ ol {
 .content__video-card {
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .content__video-card-thumbnail {
@@ -140,6 +142,7 @@ ol {
 .content__video-card-description-container {
   flex-grow: 2;
   overflow: hidden;
+  display: inline;
 }
 
 .search-form__fieldset-title {
@@ -221,8 +224,9 @@ ol {
   outline: none;
 }
 
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid white;
+.search-form__label:has(:not(:active):focus-visible) {
+  outline: 1px #fff solid;
+  outline-offset: 2px;
 }
 
 .search-form__pseudo-checkbox {
@@ -250,6 +254,7 @@ ol {
 
 .search-form__label:has(input[type="checkbox"]):hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .button {
@@ -278,6 +283,7 @@ ol {
 
 .button:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .button:active {
@@ -286,4 +292,30 @@ ol {
 
 .button:focus-visible {
   outline: 1px solid white;
+}
+
+.content__list-item {
+  padding: 0 3px;
+}
+
+.content__video-card:has(.content__card-link_current) {
+  background-color: rgb(84 80 80);
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.content__video-card:active {
+  background-color: rgb(84 80 80);
+}
+
+.content__video-card:focus {
+  outline: none;
+}
+
+.content__video-card:focus-visible {
+  outline: 1px solid white;
+  border-radius: 0;
 }
