--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,7 @@ ol {
   position: relative;
   display: flex;
   flex-direction: column;
+  gap: 30px;
   height: 298px;
   overflow: auto;
 }
@@ -205,6 +206,7 @@ ol {
   height: 27px;
   border: solid 1px white;
   border-width: 1px 0;
+  color: inherit;
   font-family: inherit;
   font-weight: inherit;
   font-size: inherit;
