--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,6 @@ ol {
   grid-template-areas: "result content__details";
   align-items: end;
   gap: 30px;
-  height: 534px;
 }
 
 .search-form {
@@ -110,8 +109,8 @@ ol {
 
 .result__video-container {
   position: relative;
-  width: 100%;
   height: 386px;
+  width: 711px;
   margin-bottom: 16px;
 }
 
